chore: update the swagger docs
